--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,69 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
+      value: Akshay Krishnan
+    # - name: Date of Birth
+    #   value: 14th March 1879
+    # - name: Languages
+    #   value: English, German
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+      institution: Georgia Institute of Technology, Atlanta, USA
+      year: 2022 - present
+      # description:
+      #   - Description 1.
+      #   - Description 2.
+      #   - title: Description 3.
+      #     contents:
+      #       - Sub-description 1.
+      #       - Sub-description 2.
+    - title: MS
+      institution: Georgia Institute of Technology, Atlanta, USA
+      year: 2018-2020
+      # description:
+      #   - Description 1.
+      #   - Description 2.
+    - title: B.Eng.
+      institution: Sri Jayachamarajendra College of Engineering, Mysuru, India
+      year: 2014-2018
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
+    - title: Student Researcher
+      institution: Google Research
+      year: 2023 - present
+      description: Representations and models for 3D lifting of 2D objects.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
+    - title: Computer Vision Engineer
+      institution: Waymo
+      year: 2020 - 2022
+      description: Long range perception for autonomous vehicles.
 
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
+    - title: Computer Vision Intern
+      institution: Blue River Technology
+      year: Summer 2019
+      description: Calibration and fusion of lidar, camera and thermal sensors.
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Software Engineering Intern
+      institution: Amagi Media Labs, Bengaluru, India
+      year: Spring 2018
+      description: Web application for timestamp extraction from videos. 
 
-- title: Open Source Projects
+    - title: Research Intern
+      institution: Indian Institute of Science, Bengaluru, India
+      year: Spring 2018
+      description: Quantifying wireless network security.
+
+- title: Open Source Contributions
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - title: <a href="https://github.com/borglab/gtsam">GTSfM</a>
+      year: 2018-now
+      description: Distributed and modular global SfM pipeline in python.
+    - title: <a href="https://github.com/borglab/gtsam">GTSAM</a>
+      year: 2017-now
+      description: Factor graph based optimization library for robotics and computer vision.
